# pipeline-watcher

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: contexts.md  file_step.md  pipeline.md  pipeline_report.md
examples/: render.py
examples/templates/: base.html.j2  batch_summary.html.j2  file_detail.html.j2  file_table.html.j2  index.html.j2
src/: settings.py
src/pipeline_watcher/: __init__.py  cli_report_summary.py  clocks.py  core.py  io.py  settings.py  utilities.py
tests/: helpers.py  test_common_usage.py  test_core.py  test_demo_batch.py  test_file_report.py  test_helpers.py  test_pipeline_report.py  test_report_base.py  test_settings.py  test_step_report.py  test_utilities.py
