[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pipeline-watcher"
version = "0.1.0"
description = "Tiny JSON-friendly batch/step reporting for pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kevin S. Raines" }]
dependencies = ["pydantic>=2.5"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]

[project.scripts]
pw-summary = "pipeline_watcher.cli_report_summary:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline_watcher"]

